--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -1,29 +1,60 @@
-<head>
-  <style> body { margin: 0; } </style>
-
-  <script src="//cdn.jsdelivr.net/npm/force-graph"></script>
-  <!--<script src="../../dist/force-graph.js"></script>-->
+<head> 
+  <style> 
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/force-graph"></script>
 </head>
 
 <body>
   <div id="graph"></div>
 
   <script>
-    // Random tree
-    const N = 300;
-    const gData = {
-      nodes: [...Array(N).keys()].map(i => ({ id: i })),
-      links: [...Array(N).keys()]
-        .filter(id => id)
-        .map(id => ({
-          source: id,
-          target: Math.round(Math.random() * (id-1))
-        }))
-    };
+    const N = 150;
+    const layers = 5;
+    const nodes = [];
+    const links = [];
 
-    const Graph = new ForceGraph()
-      (document.getElementById('graph'))
-        .linkDirectionalParticles(2)
-        .graphData(gData);
+    for (let layer = 0; layer < layers; layer++) {
+      const count = Math.round(N / layers);
+      for (let i = 0; i < count; i++) {
+        const id = nodes.length;
+        const angle = (2 * Math.PI * i) / count;
+        const radius = 100 + layer * 80;
+        const x = radius * Math.cos(angle);
+        const y = radius * Math.sin(angle);
+        nodes.push({
+          id,
+          fx: x,
+          fy: y,
+          size: Math.random() * 8 + 3,
+          color: ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'][Math.floor(Math.random() * 5)]
+        });
+        if (layer > 0) {
+          const prevLayerStart = nodes.length - count - count;
+          links.push({
+            source: id,
+            target: prevLayerStart + i % count
+          });
+        }
+      }
+    }
+
+    const gData = { nodes, links };
+
+    const Graph = ForceGraph()(document.getElementById('graph'))
+      .graphData(gData)
+      .nodeCanvasObject((node, ctx) => {
+        ctx.beginPath();
+        ctx.fillStyle = node.color;
+        ctx.arc(node.x, node.y, node.size, 0, 2 * Math.PI, false);
+        ctx.fill();
+      })
+      .linkWidth(1)
+      .linkColor(() => '#999')
+      .linkCurvature(0)
+      .enableNodeDrag(false)
+      .zoomPanInteraction(false)
+      .onEngineTick(() => Graph.pauseAnimation());
   </script>
 </body>
