made the nodes dynamic

--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -18,20 +18,14 @@
     let nodeId = 0;
     const layerNodeCounts = [];
 
-    // First, generate nodes and track layer-wise counts
+    // Generate nodes without fixed positions
     for (let layer = 0; layer < layers; layer++) {
       const count = Math.round(N / layers);
       layerNodeCounts.push(count);
 
       for (let i = 0; i < count; i++) {
-        const angle = (2 * Math.PI * i) / count;
-        const radius = 100 + layer * 80;
-        const x = radius * Math.cos(angle);
-        const y = radius * Math.sin(angle);
         nodes.push({
           id: nodeId,
-          fx: x,
-          fy: y,
           size: Math.random() * 8 + 3,
           color: ['#bc6c25', '#606c38', '#283618', '#dda15e', '#7b7b7b'][Math.floor(Math.random() * 5)]
         });
@@ -39,7 +33,7 @@
       }
     }
 
-    // Then generate links between adjacent layers
+    // Generate links between adjacent layers
     let prevStart = 0;
     for (let l = 1; l < layers; l++) {
       const currStart = layerNodeCounts.slice(0, l).reduce((a, b) => a + b, 0);
@@ -69,7 +63,6 @@
       .linkWidth(1)
       .linkColor(() => '#999')
       .linkCurvature(0)
-      .enableNodeDrag(false)
-      .onEngineTick(() => Graph.pauseAnimation());
+      .enableNodeDrag(true);  // Allow dragging
   </script>
 </body>
