--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -126,9 +126,9 @@
   }
 
   function getRandomColor() {
-    const palette = ['#6b705c', '#b7b7a4', '#cb997e', '#ddbea9', '#b5838d', '#a5a58d'];
-    return palette[Math.floor(Math.random() * palette.length)];
-  }
+  const palette = ['#999', '#c55', '#6a6', '#95a', '#dd8'];
+  return palette[Math.floor(Math.random() * palette.length)];
+}
 
   function setGraphState(newState) {
     state = newState;
@@ -147,31 +147,32 @@
         drawGrid();
         break;
 
-      case 3: // Full render with grid, lines, and nodes
+      case 3: // Grid + radial links + nodes
   showGrid = true;
   drawGrid();
 
-  // Lock positions from radial layout (used in State 2)
+  // Reposition nodes in radial layout
   nodes.forEach((node, i) => {
     const angle = (i / nodes.length) * 2 * Math.PI;
-    const radius = Math.random() * 200 + 100;
+    const radius = 200 + Math.random() * 100;
     node.fx = radius * Math.cos(angle);
     node.fy = radius * Math.sin(angle);
-    node.val = Math.random() * 10 + 2;
-    node.color = getRandomColor();
+    node.x = node.fx;
+    node.y = node.fy;
+    node.color = node.color || getRandomColor(); // Assign if not set
+    node.val = node.val || 5;
   });
 
-  Graph.graphData({ nodes: [...nodes], links });
-
-  Graph.nodeCanvasObject((node, ctx) => {
-    ctx.beginPath();
-    ctx.fillStyle = node.color || '#333';
-    const radius = node.val || 4;
-    ctx.arc(node.x, node.y, radius, 0, 2 * Math.PI, false);
-    ctx.fill();
-  });
-
-  Graph.enableNodeDrag(false);
+  Graph
+    .graphData({ nodes: [...nodes], links })
+    .nodeCanvasObject((node, ctx) => {
+      const r = node.val || 4;
+      ctx.beginPath();
+      ctx.arc(node.x, node.y, r, 0, 2 * Math.PI, false);
+      ctx.fillStyle = node.color || '#000';
+      ctx.fill();
+    })
+    .enableNodeDrag(false);
   break;
 
 
