--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -10,6 +10,7 @@
       background: rgba(255,255,255,0.9);
       padding: 10px;
       border-radius: 8px;
+      font-family: sans-serif;
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/force-graph"></script>
@@ -76,15 +77,14 @@
       .onNodeHover(node => {
         highlightNode = node;
         highlightLink = null;
-        Graph.emit('refresh'); // Correct way to redraw
+        Graph.graphData(gData); // trigger redraw
       })
       .onLinkHover(link => {
         highlightLink = link;
         highlightNode = null;
-        Graph.emit('refresh'); // Correct way to redraw
+        Graph.graphData(gData); // trigger redraw
       })
       .nodeCanvasObject((node, ctx, globalScale) => {
-        // Draw circular grid once per frame (using first node)
         if (node.id === 0 && currentState >= 2) {
           const spacing = 80;
           ctx.save();
@@ -98,7 +98,7 @@
           ctx.restore();
         }
 
-        if (currentState < 3) return; // skip node drawing in states 1 & 2
+        if (currentState < 3) return; // hide nodes in states 1 & 2
 
         const isHighlighted = node === highlightNode;
         ctx.beginPath();
@@ -113,9 +113,9 @@
       currentState = state;
       highlightNode = null;
       highlightLink = null;
-      Graph.emit('refresh'); // Use emit instead of refresh()
+      Graph.graphData(gData); // reassign to force redraw
     }
 
-    setState(3); // default
+    setState(3); // initial state
   </script>
 </body>
